# crOCRodile

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  TODO.md  crOCRodile
res/: C.char  M.char  P.char  e.char  f.char  font.list  g.char  h.char  j.char  o.char  p.char  t.char  x.char
res/Courrier_New____/: B.char  I.char  Q.char  Y.char  d.char  e.char  n.char  r.char
res/Droid_Mono______/: i.char  l.char
res/Droid_Serif_____/: N.char  a.char  b.char  e.char  o.char
res/ann/: font.list
res/ann/Courrier_New____/: ,.char  ..char  A.char  C.char  D.char  E.char  F.char  G.char  H.char  J.char  K.char  L.char  M.char  N.char  O.char  P.char  R.char  S.char  T.char  U.char  V.char  W.char  X.char  Z.char  a.char  b.char  c.char  f.char  g.char  h.char  i.char  j.char  k.char  l.char  m.char  o.char  p.char  q.char  s.char  t.char  (+6 more)
res/ann/Droid_Mono______/: ,.char  ..char  I.char  L.char  U.char  V.char  a.char  c.char  d.char  k.char  m.char  n.char  r.char  s.char  u.char
res/ann/Droid_Serif_____/: A.char  D.char  L.char  S.char  U.char  c.char  d.char  g.char  h.char  i.char  l.char  m.char  n.char  p.char  q.char  r.char  s.char  t.char  u.char  v.char  w.char
src/: defaults.h  main.c  main.h
src/ann/: network.c  network.h
src/api/: router.c  router.h
src/api/crusader/: crusader.c  crusader.h  socketutils.c  socketutils.h
src/interface/: interface.c  interface.h  interface01.c
src/io/: bmpReader.c  bmpReader.h  image.c  image.h
src/knn/: distance.c  distance.h
src/processing/: binarizator.c  binarizator.h  canny.c  canny.h  rotation.c  rotation.h
src/processing/rotation/: histogram.c  histogram.h  rotation.c  rotation.h
src/util/: image.c  image.h  maths.c  maths.h  string.c  string.h  vector.c  vector.h
src/utils/: error.c  error.h  image.c  image.h  lkList.c  lkList.h  safe.c  safe.h  string.c  vector.c  vector.h
test/: test.c  test.h
test/io/: imageLoading.c
test/utils/: vector.c
